--- a/www/css/stile.css
+++ b/www/css/stile.css
@@ -61,6 +61,12 @@ body, html {
     padding: 0;
 }
 
+.nal{
+    background-image: url("../img/fon-1.gif");
+    background-repeat: repeat;
+    background-size: auto 150%;
+}
+
 #nalychevo{
     background-image: url("../img/fon-1.gif");
     background-repeat: repeat;
